--- a/package.json
+++ b/package.json
@@ -22,18 +22,21 @@
   },
   "dependencies": {
     "@slack/client": "^3.13.0",
-    "aws-sdk": "^2.107.0",
     "babel-core": "^6.26.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "body-parser": "^1.18.2",
+    "bootstrap": "^4.0.0-alpha.6",
     "bunyan": "1.5.1",
     "express": "^4.15.2",
     "forever-monitor": "^1.7.1",
     "gulp": "latest",
     "gulp-babel": "latest",
-    "gulp-concat": "^2.6.0",
+    "gulp-clean-css": "^3.9.2",
+    "gulp-concat": "^2.6.1",
     "gulp-plumber": "^1.1.0",
+    "gulp-sass": "^3.1.0",
+    "highcharts-export-server": "^2.0.7",
     "minimist": "^1.2.0",
     "moment": "^2.18.1",
     "newrelic": "^1.40.0",
