--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@slack/client": "^3.13.0",
+    "async": "^2.6.0",
     "babel-core": "^6.26.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
@@ -41,6 +42,7 @@
     "moment": "^2.18.1",
     "newrelic": "^1.40.0",
     "pug": "^2.0.0-rc.3",
+    "redis": "^2.8.0",
     "request": "^2.81.0",
     "request-promise-native": "^1.0.5",
     "throng": "^4.0.0"
