--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0-alpha.6",
     "bunyan": "1.5.1",
+    "cors": "^2.8.4",
     "express": "^4.15.2",
     "forever-monitor": "^1.7.1",
     "gulp": "latest",
@@ -41,6 +42,7 @@
     "minimist": "^1.2.0",
     "moment": "^2.18.1",
     "newrelic": "^1.40.0",
+    "object-assign-deep": "^0.3.1",
     "pug": "^2.0.0-rc.3",
     "redis": "^2.8.0",
     "request": "^2.81.0",
