--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test": "mocha --require babel-core/register --recursive './src/**/*.spec.js'"
   },
   "devDependencies": {
-    "foreman": "^2.0.0",
+    "foreman": "^3.0.1",
     "mocha": "^5.2.0"
   },
   "dependencies": {
@@ -30,7 +30,7 @@
     "cors": "^2.8.4",
     "express": "^4.15.2",
     "forever-monitor": "^1.7.1",
-    "gulp": "latest",
+    "gulp": "^4.0.0",
     "gulp-babel": "latest",
     "gulp-clean-css": "^3.9.2",
     "gulp-concat": "^2.6.1",
@@ -39,7 +39,7 @@
     "highcharts-export-server": "^2.0.7",
     "minimist": "^1.2.0",
     "moment": "^2.18.1",
-    "newrelic": "^1.40.0",
+    "newrelic": "^4.6.0",
     "object-assign-deep": "^0.3.1",
     "pug": "^2.0.0-rc.3",
     "request": "^2.87.0",
