--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@babel/register": "^7.0.0",
     "async": "^2.6.0",
     "body-parser": "^1.18.2",
-    "bootstrap": "^4.0.0-alpha.6",
+    "bootstrap": "^4.1.3",
     "bunyan": "1.5.1",
     "cors": "^2.8.4",
     "express": "^4.15.2",
@@ -38,10 +38,12 @@
     "gulp-plumber": "^1.1.0",
     "gulp-sass": "^4.0.1",
     "highcharts-export-server": "^2.0.7",
+    "image-type": "^3.0.0",
     "minimist": "^1.2.0",
     "moment": "^2.18.1",
     "newrelic": "^4.6.0",
     "object-assign-deep": "^0.3.1",
+    "pajk-lwip": "^0.2.0",
     "pug": "^2.0.0-rc.3",
     "request": "^2.87.0",
     "request-promise-native": "^1.0.5",
