--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Generate charts easily through a simple REST API.",
   "main": "forever.js",
   "engines": {
-    "node": "8.10.0"
+    "node": "12.14.0"
   },
   "repository": {
     "type": "git",
@@ -18,37 +18,35 @@
   },
   "devDependencies": {
     "foreman": "^3.0.1",
-    "mocha": "^5.2.0"
+    "mocha": "^7.0.1",
+    "nodemon": "^2.0.2"
   },
   "dependencies": {
-    "@babel/core": "^7.1.2",
-    "@babel/preset-env": "^7.1.0",
-    "@babel/register": "^7.0.0",
-    "async": "^2.6.0",
-    "body-parser": "^1.18.2",
+    "@babel/core": "^7.8.3",
+    "@babel/preset-env": "^7.8.3",
+    "@babel/register": "^7.8.3",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.1.3",
-    "bunyan": "1.5.1",
-    "cors": "^2.8.4",
-    "express": "^4.15.2",
-    "forever-monitor": "^1.7.1",
-    "gulp": "^4.0.0",
-    "gulp-babel": "latest",
-    "gulp-clean-css": "^3.9.2",
+    "bunyan": "^1.8.12",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "forever-monitor": "^2.0.0",
+    "gulp": "^4.0.2",
+    "gulp-babel": "^8.0.0",
+    "gulp-clean-css": "^4.2.0",
     "gulp-concat": "^2.6.1",
-    "gulp-plumber": "^1.1.0",
-    "gulp-sass": "^4.0.1",
-    "highcharts-export-server": "^2.0.7",
-    "image-type": "^3.0.0",
+    "gulp-plumber": "^1.2.1",
+    "gulp-sass": "^4.0.2",
+    "highcharts-export-server": "^2.0.24",
+    "image-type": "^4.1.0",
     "minimist": "^1.2.0",
-    "moment": "^2.18.1",
-    "newrelic": "^4.6.0",
-    "object-assign-deep": "^0.3.1",
-    "pajk-lwip": "^0.2.0",
-    "pug": "^2.0.0-rc.3",
-    "request": "^2.87.0",
-    "request-promise-native": "^1.0.5",
-    "serverless": "^1.26.1",
-    "serverless-http": "^1.6.0",
+    "moment": "^2.24.0",
+    "object-assign-deep": "^0.4.0",
+    "pug": "^2.0.4",
+    "request": "^2.88.0",
+    "request-promise-native": "^1.0.8",
+    "serverless": "^1.61.3",
+    "serverless-http": "^2.3.1",
     "throng": "^4.0.0"
   },
   "author": "Lance Whatley <whatl3y@gmail.com> (https://www.lance.to)",
